tests/single_instruction_translation_validation/mcsema/register-variants-samereg/vsqrtsd_xmm_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:207:26: error: use of undefined value '@sqrt'
  %27 = tail call double @sqrt(double %7) #21
                         ^
0.00user 0.04system 0:00.09elapsed 62%CPU (0avgtext+0avgdata 27892maxresident)k
0inputs+16outputs (0major+3279minor)pagefaults 0swaps
